Fixed horizontal scroll

--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -13,6 +13,7 @@
   position: relative;
   left: 0;
   bottom: 0;
+  box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px) {
