--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
   font-family: 'Inter', Arial, sans-serif;
   background-color: #2A2C2F;
-  width: 100vw;
+  width: 100%;
   padding-bottom: 24px;
   display: flex;
   flex-direction: column;
