--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -5,6 +5,7 @@
   gap: 32px;
   box-sizing: border-box;
   padding-bottom: 49px;
+  overflow: hidden;
 }
 
 .place:last-of-type {
